--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -1,9 +1,9 @@
 # section information
 section:
-  name: Achievements
+  name: Achievements 🏆
   id: achievements
   enable: true
-  weight: 6
+  weight: 8
   showOnNavbar: true
   # Can optionally hide the title in sections
   # hideTitle: true
