--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,9 @@ enableEmoji: true
 
 # Site parameters
 params:
+  # set background image
+  background: "images/background3.gif"
+
   # GitHub repo URL and branch of your site
   gitRepo: https://github.com/MikailINTech/mikail.github.io
   gitBranch: main
@@ -44,13 +47,10 @@ params:
   # specify whether you want the language flags to be displayed. 
   showFlags: true
 
-  # Provide newsletter configuration. 
-  # This feature has been implemented for Mailchimp only for now.
-  # You can also hide it from the footer.
-  newsletter:
-    # specify whether you want to display the newsletter form 
-    enable: true
-    # specify which newsletter provider you want to use
-    provider: mailchimp
-    # specify the target URL for the subscription form
-    mailchimpURL: https://github.us1.list-manage.com/subscribe/post?u=19de52a4603135aae97163fd8&amp;id=094a24c76e
+  # specify whether you can use emojis
+  enableEmoji: true
+
+darkMode:
+  enable: true
+  provider: darkreader
+  default: dark
