--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,16 +1,17 @@
 # some information about you
 name: "Mikail Duzenli"
 nickname: "Mikail"
+
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
-image: "images/author/me.png"
+greeting: "Hi👋🏼, welcome to my portfolio, I am"
+image: "images/author/me.jpeg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "duzenlimikail@gmail.com"
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am recently graduate
+  - I am passionate by Artificial Intelligence
+  - I love solving problems
+  - I contribute to open-source
+  - I try to constantly learn more about Machine Learning
