--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -1,23 +1,23 @@
 # section information
 section:
-  name: Projects
+  name: Projects 🖥️
   id: projects
   enable: true
-  weight: 4
+  weight: 6
   showOnNavbar: true
   # Can optionally hide the title in sections
   # hideTitle: true
 
 # filter buttons
-buttons:
-- name: All
-  filter: "all"
-- name: Professional
-  filter: "professional"
-- name: Academic
-  filter: "academic"
-- name: Hobby
-  filter: "hobby"
+#buttons:
+#- name: All
+#  filter: "all"
+#- name: Professional
+#  filter: "professional"
+#- name: Academic
+#  filter: "academic"
+#- name: Hobby
+#  filter: "hobby"
 
 # your projects
 projects:
