--- a/data/en/sections/recent-posts.yaml
+++ b/data/en/sections/recent-posts.yaml
@@ -1,7 +1,7 @@
 # section information
 section:
-  name: Recent Posts
+  name: Recent Posts 📃
   id: recent-posts
   enable: true
-  weight: 5
+  weight: 8
   showOnNavbar: true
