--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -23,9 +23,7 @@ section:
 projects:
 - name: Adversarial attacks
   logo: /images/sections/projects/adversarial.png
-  role: Contributor
-  timeline: "March 2018 - Present"
   repo: https://github.com/MikailINTech/adversarial-networks # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Testing adversarial attacks and defense.
-  tags: ["computer vision","deep learning"]
+  tags: ["computer vision","deep learning","pytorch"]
