removed useles lines

--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ params:
     analytics:
       enabled: true
       goatCounter:
-        code: <mikail>
+        code: mikail
         
   newsletter:
       enable: false
