--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -27,3 +27,10 @@ projects:
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Testing adversarial attacks and defense.
   tags: ["computer vision","deep learning","pytorch"]
+
+- name: Fifa 19 overall score prediction
+  logo: /images/sections/projects/fifa.jpg
+  repo: https://github.com/MikailINTech/fifa19_overall_prediction # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: The aim of this project is to compare and study the different optimization techniques for linear regression on a medium scale dataset.
+  tags: ["Linear regression","visualization","optimization"]
