--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -14,13 +14,10 @@ designation: About me
 #resume: "files/resume.pdf"
 
 # a summary about you
-summary: "I recently graduated from PSL University’s AI Master of Science. Before this experience, I spent three years at Télécom SudParis where I specialized in Data and Statistics. During my last years, my courses ranged from basic software skills to advanced deep learning theory and application. You can check some of the projects I developed on my Github. 
-
-I did two 6 months internships at Safran Electronics & Defense and Inria Saclay. During the first one, I had to dive deep into statistical algorithms such as Kalman Filters and Probability Hypothesis Density (PHD) Filters. Despite the extent of what I have learned, I felt that I wanted to specialize in Machine and Deep learning-related fields. For my last internship, I worked on a meaningful project while studying and building state-of-the-art Deep learning models such as cGANs. 
-
-Now that I am fresh graduate, I dedicate my time to continue learning by participating in Kaggle competitions or trying to contribute to open-source.
-
-If you think that we could work together in a dynamic team or collaborate on an innovative project, feel free to reach me."
+summary: "I recently graduated from PSL University’s AI Master of Science. Before this experience, I spent three years at Télécom SudParis where I specialized in Data and Statistics.
+My competency range from basic software skills to advanced deep learning theory and application, and I have had the opportunity to put these skills into practice through my experiences in both a company and a laboratory. 
+My education and experience make me well-equipped to tackle complex business and research problems, and I am always excited to bring my skills and knowledge to new challenges.
+Whether you are looking for a data-driven solution to a business problem or a skilled person with a strong background in AI, feel free to reach me, I believe I would be a great fit for your needs."
 
 
 # your social links
